--- a/src/_includes/layouts/home.njk
+++ b/src/_includes/layouts/home.njk
@@ -12,7 +12,7 @@
 {% set postListItems = collections.postFeed %}
 
 {# Archive link #}
-{% if postListItems.length < collections.posts.length %} 
+{% if postListItems.length < collections.posts.length %}
   {% set paginationNextText = archiveButtonText %}
   {% set paginationNextUrl = '/archive' %}
 {% endif %}
@@ -20,7 +20,7 @@
 {% block content %}
   <main id="main-content" tabindex="-1">
     {% include "partials/components/intro.njk" %}
-    {% include "partials/components/post-list.njk" %}
-    {% include "partials/components/pagination.njk" %}
+    {# {% include "partials/components/post-list.njk" %} #}
+    {# {% include "partials/components/pagination.njk" %} #}
   </main>
 {% endblock %}
