Looking into font issues

--- a/src/scss/_typography.scss
+++ b/src/scss/_typography.scss
@@ -9,7 +9,7 @@
 // }
 
 @font-face {
-  font-family: 'Omega Sans';
+  font-family: Omega Sans;
   font-style: normal;
   font-weight: 400;
   src: local('Omega Sans'), local('Omega-Sans'),
@@ -19,7 +19,7 @@
 }
 
 @font-face {
-  font-family: 'Wremene';
+  font-family: Wremene;
   font-style: normal;
   font-weight: 300;
   src: local('Wremene'),
@@ -29,7 +29,7 @@
 }
 
 @font-face {
-  font-family: 'Wremene';
+  font-family: Wremene;
   font-style: normal;
   font-weight: 400;
   src: local('Wremene'),
@@ -39,7 +39,7 @@
 }
 
 @font-face {
-  font-family: 'Wremene';
+  font-family: Wremene;
   font-style: normal;
   font-weight: 700;
   src: local('Wremene'),
