--- a/src/scss/_config.scss
+++ b/src/scss/_config.scss
@@ -165,7 +165,7 @@ $stalfos-config: (
   ),
   'utilities': (
     'reset': 'on',
-    'icon': 'off',
+    'icon': 'on',
     'flow': 'on',
     'wrapper': 'off'
   )
