--- a/src/_includes/partials/components/intro.njk
+++ b/src/_includes/partials/components/intro.njk
@@ -1,8 +1,8 @@
 <header class="[ intro ] [ pad-top-900 pad-bottom-max ]">
   <div class="wrapper [ sf-flow ]">
-    <h1 class="[ intro__heading ] [ text-800 md:text-900 leading-tight ] [ p-name ]">{{ introHeading }}</h1>
+    <h1 class="[ intro__heading ] [ text-800 md:text-max leading-tight ] [ p-name ]">{{ introHeading }}</h1>
     {% if introSummary %}
-      <div class="[ intro__summary ] [ sf-flow ] [ leading-mid measure-short ]">{{ introSummary | safe }}</div>
+      <div class="[ intro__summary ] [ sf-flow ] [ leading-tight ]">{{ introSummary | safe }}</div>
     {% endif %}
   </div>
 </header>
