--- a/src/scss/components/_intro.scss
+++ b/src/scss/components/_intro.scss
@@ -2,7 +2,7 @@
 	animation: GradientShift 30s ease infinite;
 	background: linear-gradient(90deg, rgb(119, 14, 191), rgb(238, 141, 125));
 	color: var(--color-light);
-	height: 100vh;
+	height: 80vh;
 
 	.wrapper {
 		display: flex;
@@ -25,7 +25,6 @@
 	}
 
 	&__heading {
-		font-size: get-size(max);
 		font-weight: 400;
 		max-width: 40ex;
 
@@ -35,8 +34,12 @@
 	}
 
 	&__meta {
-		color: var(--color-theme-primary);
+		color: var(--color-light);
 	}
+}
+
+.section-intro {
+	margin-top: 0;
 }
 
 @keyframes GradientShift {
