--- a/src/_includes/partials/components/people-list.njk
+++ b/src/_includes/partials/components/people-list.njk
@@ -4,14 +4,11 @@
       <h2 class="[ people-list__heading ] [ text-700 md:text-800 ]">Inspiring Folks</h2>
 	  <p class="section-intro">A few people who have inspired and helped me grow as a developer. Thank you!</p>
       <ol class="[ people-list__items ] [ sf-flow ] [ pad-top-300 ]" reversed>
-        {% for item in postListItems %}
+        {% for item in peopleListItems %}
           <li class="post-list__item">
-            <h3 class="font-base leading-tight text-600 weight-mid">
-              <a href="{{ item.url }}" class="people-list__link" rel="bookmark">{{ item.data.title }}</a>
-            </h3>
-            <p class="text-500 gap-top-300 weight-mid">
-              <time datetime="{{ item.date | w3DateFilter }}">{{ item.date | dateFilter }}</time>
-            </p>
+            <h3>Holly Goodrum</h3>
+			<p>A wonderful Bristol based designer</p>
+			<a href="https://hollygoodrum.co.uk" rel="external">https://hollygoodrum.co.uk</a>
           </li>
         {% endfor %}
       </ol>
