--- a/src/_includes/partials/components/post-list.njk
+++ b/src/_includes/partials/components/post-list.njk
@@ -6,7 +6,7 @@
       <ol class="[ post-list__items ] [ sf-flow ] [ pad-top-300 ]" reversed>
         {% for item in postListItems %}
           <li class="post-list__item">
-            <h3 class="font-base leading-tight text-600 weight-mid">
+            <h3 class="font-base leading-tight text-600">
               <a href="{{ item.url }}" class="post-list__link" rel="bookmark">{{ item.data.title }}</a>
             </h3>
             <p class="text-500 gap-top-300 weight-mid">
