--- a/src/scss/global.scss
+++ b/src/scss/global.scss
@@ -42,6 +42,7 @@ hr {
 @import 'components/intro';
 @import 'components/nav';
 @import 'components/pagination';
+@import 'components/people';
 @import 'components/post';
 @import 'components/post-list';
 @import 'components/site-head';
