--- a/src/_includes/layouts/home.njk
+++ b/src/_includes/layouts/home.njk
@@ -22,6 +22,6 @@
   <main id="main-content" tabindex="-1">
     {% include "partials/components/intro.njk" %}
     {% include "partials/components/post-list.njk" %}
-    {# {% include "partials/components/people-list.njk" %} #}
+    {% include "partials/components/people-list.njk" %}
   </main>
 {% endblock %}
