--- a/src/scss/components/_people.scss
+++ b/src/scss/components/_people.scss
@@ -36,6 +36,7 @@
 
 @media screen and (min-width: 768px) {
 	.people-list__item {
+		flex-basis: 50%;
 		text-align: left;
 
 		+ .people-list__item {
