--- a/src/_includes/partials/components/people-list.njk
+++ b/src/_includes/partials/components/people-list.njk
@@ -3,7 +3,7 @@
     <div class="[ wrapper ] [ sf-flow ]">
       <h2 class="[ people-list__heading ] [ text-700 md:text-800 ]">Inspiring Folks</h2>
 	  <p class="section-intro">A few people who I work/have worked with that inspire me and have helped me grow as a developer - thank you! (there are more, but I can't find pictures of all their faces!)</p>
-      <ul class="[ people-list__items ] [ md:box-flex ] [ pad-top-300 ]" reversed>
+      <ul class="[ people-list__items ] [ pad-top-300 ]" reversed>
         {% for people in collections.people %}
           <li class="people-list__item [ sf-flow ] [ md:box-flex md:align-center ]">
 		  	<div class="people-list__image">
