--- a/src/_includes/layouts/post.njk
+++ b/src/_includes/layouts/post.njk
@@ -30,9 +30,9 @@
           <div class="inner-wrapper">
             <div class="[ nav ] [ box-flex align-center ]">
               <h2 class="font-base text-600 weight-mid">Filed under</h2>
-              <ul class="[ nav__list ] [ box-flex align-center pad-left-400 ] [ p-category ]">
+              <ul class="[ nav__list nav__list--tags ] [ box-flex align-center pad-left-400 ] [ p-category ]">
                 {% for item in tags %}
-                  <li class="nav__item">
+                  <li class="nav__item nav__item--tag">
                     <a href="/tags/{{ item }}">{{ item }}</a>
                   </li>
                 {% endfor %}
