💄⬆️ Intro gradient animation
Ran audit fix

--- a/src/scss/components/_intro.scss
+++ b/src/scss/components/_intro.scss
@@ -1,63 +1,64 @@
 .intro {
-	animation: GradientShift 30s ease infinite;
-	background: linear-gradient(90deg, rgb(119, 14, 191), rgb(238, 141, 125));
-	color: var(--color-light);
-	height: 500px;
+  animation: GradientShift 10s ease infinite;
+  background: linear-gradient(90deg, rgb(119, 14, 191), rgb(238, 141, 125));
+  background-size: 200%;
+  color: var(--color-light);
+  height: 500px;
 
-	.wrapper {
-		display: flex;
-		flex-direction: column;
-		height: 100%;
-		justify-content: center;
-	}
+  .wrapper {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    justify-content: center;
+  }
 
-	&__summary {
-		--flow-space: #{get-size(500)};
-		font-size: get-size(600);
+  &__summary {
+    --flow-space: #{get-size(500)};
+    font-size: get-size(600);
 
-		a {
-			color: currentColor;
+    a {
+      color: currentColor;
 
-			&:hover {
-				text-decoration: none;
-			}
-		}
-	}
+      &:hover {
+        text-decoration: none;
+      }
+    }
+  }
 
-	&__heading {
-		font-weight: 400;
-		max-width: 40ex;
+  &__heading {
+    font-weight: 400;
+    max-width: 40ex;
 
-		&--compact {
-			max-width: 20ex;
-		}
-	}
+    &--compact {
+      max-width: 20ex;
+    }
+  }
 
-	&__meta {
-		color: var(--color-light);
-	}
+  &__meta {
+    color: var(--color-light);
+  }
 }
 
 .section-intro {
-	margin-top: 0;
+  margin-top: 0;
 }
 
 @media screen and (min-width: 768px) {
-	.intro {
-		height: 80vh;
-	}
+  .intro {
+    height: 80vh;
+  }
 }
 
 @keyframes GradientShift {
-	0% {
-		background-position: 0% 90%;
-	}
+  0% {
+    background-position: 0% 90%;
+  }
 
-	50% {
-		background-position: 100% 11%;
-	}
+  50% {
+    background-position: 100% 11%;
+  }
 
-	100% {
-		background-position: 0% 90%;
-	}
+  100% {
+    background-position: 0% 90%;
+  }
 }
