--- a/src/scss/components/_nav.scss
+++ b/src/scss/components/_nav.scss
@@ -1,63 +1,63 @@
 .nav {
-  &__list {
-    overflow-x: auto;
-    -webkit-overflow-scrolling: touch;
-    -ms-overflow-style: none;
+    &__list {
+        overflow-x: auto;
+        -webkit-overflow-scrolling: touch;
+        -ms-overflow-style: none;
 
-    &::-webkit-scrollbar {
-      display: none;
+        &::-webkit-scrollbar {
+            display: none;
+        }
+
+        > * + * {
+            margin-left: get-size(700);
+        }
     }
 
-    > * + * {
-      margin-left: get-size(700);
+    &__item {
+        padding: get-size(300) 0;
+        flex-shrink: 0;
+
+        &.active {
+            a {
+                &:after {
+                    width: 100%;
+                }
+            }
+        }
+
+        a {
+            color: var(--color-light);
+            font-size: get-size(500);
+
+            &:after {
+                background-color: var(--color-light);
+                content: '';
+                display: block;
+                height: 1px;
+                transition: width 0.35s;
+                width: 0;
+            }
+
+            &:not(:hover) {
+                text-decoration: none;
+            }
+
+            &:hover,
+            &:focus {
+                text-decoration: none;
+
+                &:after {
+                    width: 100%;
+                }
+            }
+        }
+
+        &--tag {
+            a {
+                &:after {
+                    display: none;
+                }
+            }
+        }
     }
-  }
-
-  &__item {
-    padding: get-size(300) 0;
-	flex-shrink: 0;
-
-	&.active {
-		a {
-			&:after {
-				width: 100%;
-			}
-		}
-	}
-
-    a {
-	  color: var(--color-light);
-	  font-size: get-size(500);
-
-	  &:after {
-		  background-color: var(--color-light);
-		  content: '';
-		  display: block;
-		  height: 1px;
-		  transition: width .35s;
-		  width: 0;
-	  }
-
-      &:not(:hover) {
-        text-decoration: none;
-	  }
-
-	  &:hover,
-	  &:focus {
-		  text-decoration: none;
-
-		  &:after {
-			  width: 100%;
-		  }
-	  }
-	}
-
-	&--tag {
-		a {
-			&:after {
-				display: none
-			}
-		}
-	}
-  }
 }
