--- a/src/scss/components/_people.scss
+++ b/src/scss/components/_people.scss
@@ -1,49 +1,49 @@
 .people-list__image {
-	height: 150px;
-	margin: 0 auto;
-	min-width: 150px;
-	position: relative;
-	width: 150px;
+    height: 150px;
+    margin: 0 auto;
+    min-width: 150px;
+    position: relative;
+    width: 150px;
 
-	img {
-		border-radius: 50%;
-		box-shadow: 3px 3px 0 rgba(0, 0, 0, .1);
-		height: 100%;
-		left: 0;
-		object-fit: cover;
-		position: absolute;
-		top: 0;
-		width: 100%;
-	}
+    img {
+        border-radius: 50%;
+        box-shadow: 3px 3px 0 rgba(0, 0, 0, 0.1);
+        height: 100%;
+        left: 0;
+        object-fit: cover;
+        position: absolute;
+        top: 0;
+        width: 100%;
+    }
 }
 
 .people-list__item {
-	margin-bottom: 40px;
-	text-align: center;
+    margin-bottom: 40px;
+    text-align: center;
 
-	a {
-		color: var(--color-dark);
-		text-decoration: none;
+    a {
+        color: var(--color-dark);
+        text-decoration: none;
 
-		&:hover,
-		&:focus {
-			text-decoration: underline;
-		}
-	}
+        &:hover,
+        &:focus {
+            text-decoration: underline;
+        }
+    }
 }
 
 @media screen and (min-width: 768px) {
-	.people-list__items {
-		display: grid;
-		grid-gap: 20px 40px;
-		grid-template-columns: 1fr 1fr;
-	}
+    .people-list__items {
+        display: grid;
+        grid-gap: 20px 40px;
+        grid-template-columns: 1fr 1fr;
+    }
 
-	.people-list__item {
-		text-align: left;
-	}
+    .people-list__item {
+        text-align: left;
+    }
 
-	.people-list__image {
-		margin-right: 20px;
-	}
+    .people-list__image {
+        margin-right: 20px;
+    }
 }
