--- a/src/scss/components/_site-foot.scss
+++ b/src/scss/components/_site-foot.scss
@@ -1,6 +1,6 @@
 .site-foot {
     // Reverse whatever the theme colors are
-    background: var(--color-text);
+    background-color: var(--color-accent);
     color: var(--color-bg);
 
     // Reverse selection colors
