--- a/src/scss/global.scss
+++ b/src/scss/global.scss
@@ -38,6 +38,8 @@ hr {
 @import 'utilities/wrapper';
 
 // Components
+
+@import 'components/about';
 @import 'components/heading-permalink';
 @import 'components/intro';
 @import 'components/nav';
