--- a/src/scss/components/_post-list.scss
+++ b/src/scss/components/_post-list.scss
@@ -1,12 +1,13 @@
 .post-list {
-    background-color: #f6f9fc;
+    background-color: var(--color-accent);
+    color: var(--color-light);
 
     &__item {
         --flow-space: #{get-size(700)};
     }
 
     &__link {
-        color: var(--color-theme-primary);
+        color: var(--color-light);
         text-decoration: none;
 
         &:hover {
