✨💄 New font and some styling tweaks

--- a/src/_includes/partials/components/about.njk
+++ b/src/_includes/partials/components/about.njk
@@ -1,5 +1,6 @@
 <section class="[ about ] [ pad-top-900 pad-bottom-max ]">
 	<div class="[ wrapper ] [ sf-flow ]">
-		<p>{{ about | safe }}</p>
+		<h2 class="[ post-list__heading ] [ text-700 md:text-900 ]">About Me</h2>
+		<p class="[ pad-top-800 ]">{{ about | safe }}</p>
 	</div>
 </section>
