--- a/src/scss/_theme.scss
+++ b/src/scss/_theme.scss
@@ -16,9 +16,9 @@
     --color-theme-primary-glare: #{get-color('primary-glare')};
     --color-theme-highlight: #{get-color('highlight')};
 
-    --color-light: #fff;
+    --color-light: rgb(255, 255, 255);
     --color-grey-light: #f6f9fc;
-    --color-accent: #32325d;
+    --color-accent: rgb(50, 50, 93);
 }
 
 body {
