--- a/src/scss/components/_post-list.scss
+++ b/src/scss/components/_post-list.scss
@@ -8,10 +8,11 @@
 
     &__link {
         color: var(--color-light);
-        text-decoration: none;
 
-        &:hover {
-            text-decoration: underline;
+        &.link-hover {
+            &:after {
+                height: 4px;
+            }
         }
     }
 }
