--- a/src/scss/components/_people.scss
+++ b/src/scss/components/_people.scss
@@ -24,12 +24,6 @@
     a {
         color: var(--color-dark);
         font-weight: 500;
-        text-decoration: none;
-
-        &:hover,
-        &:focus {
-            text-decoration: underline;
-        }
     }
 }
 
@@ -37,7 +31,7 @@
     .people-list__items {
         display: grid;
         grid-gap: 20px 40px;
-        grid-template-columns: 1fr 1fr;
+        grid-template-columns: repeat(2, 1fr);
     }
 
     .people-list__item {
