--- a/src/_includes/partials/components/about.njk
+++ b/src/_includes/partials/components/about.njk
@@ -1,6 +1,7 @@
 <section class="[ about ] [ pad-top-900 pad-bottom-max ]">
 	<div class="[ wrapper ] [ sf-flow ]">
 		<h2 class="[ post-list__heading ] [ text-700 md:text-900 ]">About Me</h2>
+		<p class="section-intro">I'm nothing special, still a work in progress and still learning all the time</p>
 		<p class="[ pad-top-800 ]">{{ about | safe }}</p>
 	</div>
 </section>
